CSS fix for alignment

--- a/src/component/product/product.module.css
+++ b/src/component/product/product.module.css
@@ -52,7 +52,7 @@ color: black;
 
 .agentContainer{
 
-  padding: 0% 5%;
+  padding: 0% 0%;
 
 }
 
